--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
             <a href="#logo" class="logo">
-                <img src="./images/StudySyn.svg" alt="logoImage" class="logo-icon" />
+                <img src="StudySyn.svg" alt="logoImage" class="logo-icon" />
                 <span class="logo-text">  CodeCrafted</span>
             </a>
 
@@ -329,4 +329,5 @@
     </div>
     
 </body>
+
 </html>
